--- a/package.json
+++ b/package.json
@@ -6,5 +6,12 @@
   "repository": "git@github.com:swashcap/setup-polly-jest-constructor-error.git",
   "author": "Cory Reed",
   "license": "Apache-2.0",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@pollyjs/core": "^2.6.2",
+    "jest": "^24.9.0"
+  },
+  "scripts": {
+    "test": "jest"
+  }
 }
