--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "private": true,
   "devDependencies": {
     "@pollyjs/core": "^2.6.2",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "prettier": "^1.18.2"
   },
   "scripts": {
+    "format": "prettier --write '**/*.{js,json}'",
     "test": "jest"
   }
 }
