--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   "license": "Apache-2.0",
   "private": true,
   "devDependencies": {
+    "@pollyjs/adapter-node-http": "^2.6.2",
     "@pollyjs/core": "^2.6.2",
+    "@pollyjs/persister-fs": "^2.6.2",
     "jest": "^24.9.0",
+    "node-fetch": "^2.6.0",
     "prettier": "^1.18.2"
   },
   "scripts": {
     "format": "prettier --write '**/*.{js,json}'",
-    "test": "jest"
+    "postinstall": "./scripts/postinstall.bash",
+    "test": "jest --runInBand"
   }
 }
